--- a/admin.html
+++ b/admin.html
@@ -346,9 +346,10 @@ let toastTimer;
 
 /* ─ WS ─ */
 function connect() {
+  const protocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
   const host = location.hostname;
-  const port = location.port || 3000;
-  ws = new WebSocket(`ws://${host}:${port}`);
+  const port = location.port ? ':' + location.port : '';
+  ws = new WebSocket(`${protocol}//${host}${port}`);
 
   ws.onopen = () => {
     document.getElementById('connDot').classList.add('live');
